# mlir-lab

./: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  README.md
.github/workflows/: ci.yml
bazel/: BUILD.bazel  lit.bzl
projects/: BUILD.bazel
projects/mlir_basics/: BUILD.bazel  blocks_and_regions.mlir  operations.mlir  types_and_attributes.mlir
projects/seki/: BUILD.bazel
projects/seki/include/seki/: SekiAttrs.h  SekiAttrs.td  SekiDialect.h  SekiDialect.td  SekiOps.h  SekiOps.td  SekiPasses.h  SekiPasses.td  SekiTargetInfo.h  SekiTargets.h
projects/seki/include/seki_hw/: SekiHwAttrs.h  SekiHwAttrs.td  SekiHwDialect.h  SekiHwDialect.td  SekiHwInterfaces.h  SekiHwInterfaces.td  SekiHwOps.h  SekiHwOps.td  SekiHwPasses.h  SekiHwPasses.td  SekiHwTypes.h  SekiHwTypes.td
projects/seki/lib/: DumpTileEwOpsPass.cpp  MemorySpaceAssignmentPass.cpp  SekiAttrs.cpp  SekiDialect.cpp  SekiElementwiseLowering.cpp  SekiHwAttrs.cpp  SekiHwDialect.cpp  SekiHwInterfaces.cpp  SekiHwOps.cpp  SekiHwTypes.cpp  SekiHwVerifyTargetPass.cpp  SekiLowerToSekiHwPass.cpp  SekiOps.cpp  SekiPasses.cpp  SekiTargetInfo.cpp  SekiTargets.cpp
projects/seki/targets/: seki-v1.mlir
projects/seki/tests/: BUILD.bazel  linear_layer.mlir  linear_layer_tensor.mlir  matmul.mlir  matmul_invalid.mlir  memory_space_assignment.mlir  mlp_layer.mlir  relu.mlir  relu_invalid.mlir  scratchpad_linear_layer.mlir  target_load.mlir  target_load_external_file.mlir  tiled_matmul.mlir
projects/seki/tests/data/: target_seki_test.mlir
projects/seki/tests/seki/: BUILD.bazel  linear_layer.mlir  memory_space_assignment.mlir  scratchpad_linear_layer.mlir  seki_lower_to_seki_hw.mlir  target_load.mlir  target_load_external_file.mlir  target_load_invalid.mlir
projects/seki/tests/seki/data/: target_seki_test.mlir
projects/seki/tests/seki_hw/: dma_compute_overlap.mlir  dump_tile_ew_ops.mlir  seki_hw_ops.mlir  seki_hw_ops_invalid.mlir  seki_hw_types.mlir  seki_hw_types_invalid.mlir  verify_target.mlir
projects/seki/tools/: seki-opt.cpp
projects/zero_count/: BUILD.bazel
projects/zero_count/include/zero_count/: ZeroCountDialect.h  ZeroCountOps.td
projects/zero_count/lib/: LowerZeroCountPass.cpp  ZeroCountDialect.cpp
projects/zero_count/tests/: buf_matmul.mlir  dynamic_shapes.mlir  fold.mlir  lower.mlir  matmul.mlir  matmul_invalid.mlir  memref_access.mlir  test_ops.mlir  verify_invalid.mlir  verify_valid.mlir
projects/zero_count/tools/: zero-count-opt.cpp
tests/: BUILD  lit.cfg.py
tools/: BUILD.bazel  mlir-lab-opt.cpp
