load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")
load("@llvm-project//mlir:tblgen.bzl", "gentbl_cc_library", "td_library")

# td sources
td_library(
    name = "SekiDialectTdFiles",
    srcs = ["include/seki/SekiDialect.td"],
    includes = ["include"],
    deps = [
        "@llvm-project//mlir:OpBaseTdFiles",
    ]
)

td_library(
    name = "SekiOpsTdFiles",
    srcs = ["include/seki/SekiOps.td"],
    includes = ["include"],
    deps = [
        ":SekiDialectTdFiles",
        "@llvm-project//mlir:SideEffectInterfacesTdFiles",
        "@llvm-project//mlir:InferTypeOpInterfaceTdFiles",
        "@llvm-project//mlir:DestinationStyleOpInterfaceTdFiles",
    ]
)

# tblgen codegen
gentbl_cc_library(
    name = "SekiDialectIncGen",
    tbl_outs = [
        (["--gen-dialect-decls", "--dialect=seki"], "include/seki/SekiDialect.h.inc"),
        (["--gen-dialect-defs", "--dialect=seki"], "include/seki/SekiDialect.cpp.inc"),
        (["--gen-attrdef-decls", "--attrdefs-dialect=seki"], "include/seki/SekiAttrs.h.inc"),
        (["--gen-attrdef-defs", "--attrdefs-dialect=seki"], "include/seki/SekiAttrs.cpp.inc"),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "include/seki/SekiDialect.td",
    deps = [":SekiDialectTdFiles"],
)

gentbl_cc_library(
    name = "SekiOpsIncGen",
    tbl_outs = [
        (["--gen-op-decls"], "include/seki/SekiOps.h.inc"),
        (["--gen-op-defs"], "include/seki/SekiOps.cpp.inc"),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "include/seki/SekiOps.td",
    deps = [":SekiOpsTdFiles"],
)

# C++ dialect library
cc_library(
    name = "SekiDialect",
    srcs = [
        "lib/SekiDialect.cpp",
        "lib/SekiAttrs.cpp",
        "lib/SekiOps.cpp",
        "lib/SekiTargetInfo.cpp",
        "lib/SekiTargets.cpp",
    ],
    hdrs = [
        "include/seki/SekiDialect.h",
        "include/seki/SekiAttrs.h",
        "include/seki/SekiOps.h",
        "include/seki/SekiTargetInfo.h",
        "include/seki/SekiTargets.h"
    ],
    includes = ["include"],
    deps = [
        ":SekiDialectIncGen",
        ":SekiOpsIncGen",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Support",
        "@llvm-project//mlir:SideEffectInterfaces",
        "@llvm-project//mlir:InferTypeOpInterface",
        "@llvm-project//mlir:DestinationStyleOpInterface",
    ],
    visibility = ["//visibility:public"],

)

# Seki compiler passes
cc_library(
    name = "SekiPasses",
    srcs = [
        "lib/SekiPasses.cpp",
        "lib/MemorySpaceAssignmentPass.cpp"
    ],
    deps = [
        ":SekiDialect",
        "@llvm-project//mlir:FuncDialect",
        "@llvm-project//mlir:MemRefDialect",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Pass",
        "@llvm-project//mlir:AsmParser",
        "@llvm-project//mlir:Support",
    ],
    visibility = ["//visibility:public"],
)

# seki_hw td sources
td_library(
    name = "SekiHwDialectTdFiles",
    srcs = ["include/seki_hw/SekiHwDialect.td"],
    includes = ["include"],
    deps = [
        "@llvm-project//mlir:OpBaseTdFiles"
    ]
)

td_library(
    name = "SekiHwTypesTdFiles",
    srcs = ["include/seki_hw/SekiHwTypes.td"],
    includes = ["include"],
    deps = [
        ":SekiHwDialectTdFiles"
    ]
)

td_library(
    name = "SekiHwOpsTdFiles",
    srcs = ["include/seki_hw/SekiHwOps.td"],
    includes = ["include"],
    deps = [
        ":SekiHwDialectTdFiles",
        ":SekiHwTypesTdFiles",
        ":SekiHwAttrsTdFiles",
        "@llvm-project//mlir:SideEffectInterfacesTdFiles",
        "@llvm-project//mlir:InferTypeOpInterfaceTdFiles",
    ]
)

td_library(
    name = "SekiHwAttrsTdFiles",
    srcs = ["include/seki_hw/SekiHwAttrs.td"],
    includes = ["include"],
    deps = [
        ":SekiHwDialectTdFiles",
        "@llvm-project//mlir:OpBaseTdFiles",
    ]
)

# seki_hw tblgen codegen
gentbl_cc_library(
    name = "SekiHwDialectIncGen",
    tbl_outs = [
        (["--gen-dialect-decls", "--dialect=seki_hw"], "include/seki_hw/SekiHwDialect.h.inc"),
        (["--gen-dialect-defs", "--dialect=seki_hw"], "include/seki_hw/SekiHwDialect.cpp.inc"),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "include/seki_hw/SekiHwDialect.td",
    deps = [":SekiHwDialectTdFiles"]
)

gentbl_cc_library(
    name = "SekiHwTypesIncGen",
    tbl_outs = [
        (["--gen-typedef-decls", "--typedefs-dialect=seki_hw"], "include/seki_hw/SekiHwTypes.h.inc"),
        (["--gen-typedef-defs", "--typedefs-dialect=seki_hw"], "include/seki_hw/SekiHwTypes.cpp.inc"),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "include/seki_hw/SekiHwTypes.td",
    deps = [":SekiHwTypesTdFiles"]
)

gentbl_cc_library(
    name = "SekiHwOpsIncGen",
    tbl_outs = [
        (["--gen-op-decls"], "include/seki_hw/SekiHwOps.h.inc"),
        (["--gen-op-defs"], "include/seki_hw/SekiHwOps.cpp.inc"),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "include/seki_hw/SekiHwOps.td",
    deps = [":SekiHwOpsTdFiles"]
)

gentbl_cc_library(
    name = "SekiHwAttrsIncGen",
    tbl_outs = [
        (["--gen-enum-decls"], "include/seki_hw/SekiHwEnums.h.inc"),
        (['--gen-enum-defs'], "include/seki_hw/SekiHwEnums.cpp.inc"),
        (["--gen-attrdef-decls", "--attrdefs-dialect=seki_hw"], "include/seki_hw/SekiHwAttrs.h.inc"),
        (["--gen-attrdef-defs", "--attrdefs-dialect=seki_hw"], "include/seki_hw/SekiHwAttrs.cpp.inc"),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "include/seki_hw/SekiHwAttrs.td",
    deps = [":SekiHwAttrsTdFiles"],
)

cc_library(
    name = "SekiHwDialect",
    srcs = [
        "lib/SekiHwDialect.cpp",
        "lib/SekiHwTypes.cpp",
        "lib/SekiHwOps.cpp",
        "lib/SekiHwAttrs.cpp",
    ],
    hdrs = [
        "include/seki_hw/SekiHwDialect.h",
        "include/seki_hw/SekiHwTypes.h",
        "include/seki_hw/SekiHwOps.h",
        "include/seki_hw/SekiHwAttrs.h",
    ],
    includes = ["include"],
    deps = [
        ":SekiHwDialectIncGen",
        ":SekiHwTypesIncGen",
        ":SekiHwOpsIncGen",
        ":SekiHwAttrsIncGen",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Support",
        "@llvm-project//mlir:SideEffectInterfaces",
        "@llvm-project//mlir:InferTypeOpInterface",
    ],
    visibility = ["//visibility:public"],
)

# seki-opt tool
cc_binary(
    name = "seki-opt",
    srcs = ["tools/seki-opt.cpp"],
    deps = [
        ":SekiDialect",
        ":SekiPasses",
        ":SekiHwDialect",
        "@llvm-project//mlir:MlirOptLib",
        "@llvm-project//mlir:RegisterAllDialects",
        "@llvm-project//mlir:RegisterAllPasses"
    ],
    visibility = ["//visibility:public"],
)
