load("@rules_cc//cc:defs.bzl", "cc_library", "cc_binary")
load("@llvm-project//mlir:tblgen.bzl", "gentbl_cc_library", "td_library")

# 1. Declare the .td files as a library so gentbl can depend on it
td_library(
    name = "ZeroCountOpsTdFiles",
    srcs = ["include/zero_count/ZeroCountOps.td"],
    includes = ["include"],
    deps = [
        "@llvm-project//mlir:OpBaseTdFiles",
    ],
)

# 2. Run mlir-tblgen to generate the 4 .inc files
gentbl_cc_library(
    name = "ZeroCountOpsIncGen",
    tbl_outs = [
        (["--gen-dialect-decls", "--dialect=zero_count"], "include/zero_count/ZeroCountDialect.h.inc"),
        (["--gen-dialect-defs", "--dialect=zero_count"], "include/zero_count/ZeroCountDialect.cpp.inc"),
        (["--gen-op-decls"], "include/zero_count/ZeroCountOps.h.inc"),
        (["--gen-op-defs"], "include/zero_count/ZeroCountOps.cpp.inc"),
    ],
    tblgen = "@llvm-project//mlir:mlir-tblgen",
    td_file = "include/zero_count/ZeroCountOps.td",
    deps = [":ZeroCountOpsTdFiles"],
)

# 3. The C++ dialect library
cc_library(
    name = "ZeroCountDialect",
    srcs = ["lib/ZeroCountDialect.cpp"],
    hdrs = ["include/zero_count/ZeroCountDialect.h"],
    includes = ["include"],
    deps = [
        ":ZeroCountOpsIncGen",
        "@llvm-project//mlir:IR",
        "@llvm-project//mlir:Support",
    ],
)

# 4. The LowerZeroCountPass
cc_library(
    name = "LowerZeroCountPass",
    srcs = ["lib/LowerZeroCountPass.cpp"],
    deps = [
        ":ZeroCountDialect",
        "@llvm-project//mlir:ArithDialect",
        "@llvm-project//mlir:FuncDialect",
        "@llvm-project//mlir:MathDialect",
        "@llvm-project//mlir:Pass",
        "@llvm-project//mlir:TransformUtils",
        "@llvm-project//mlir:IR",
    ]
)

# 4. the zero-count-opt tool
cc_binary(
    name = "zero-count-opt",
    srcs = ["tools/zero-count-opt.cpp"],
    visibility = ["//visibility:public"],
    deps = [
        ":ZeroCountDialect",
        ":LowerZeroCountPass",
        "@llvm-project//mlir:MlirOptLib",
        "@llvm-project//mlir:RegisterAllDialects",
        "@llvm-project//mlir:RegisterAllPasses",
    ],
)
